# PhotoShare2

./: .env  .example.env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
js/: login.js  modal2.js  signup2.js  transform.js  utils2.js
migrations/: env.py
migrations/versions/: 0ad193d94393_add_fields.py  1e30e1962637_add_unique.py  5234890086c5_add_transform.py  850aa22b160f_init.py  8a6626473d92_add_unique.py  dc8491e8f25f_add_models.py  eea5a6a88188_add_comments.py  fe24bf823d7d_add_unique.py
src/: base.py  schemas.py  transformation.json
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: auth.py  comments.py  photos.py  tags.py  users.py
src/routes/: auth.py  comments.py  myuser.py  photos.py  users.py
src/routes/forms/: login_form.py  signup_form.py
src/services/: auth.py  cloud_image.py  custom_json.py  custom_limiter.py  email.py  pager.py  roles.py  utils.py  validators.py
static/: cover.css  styles.css
templates/: _macros_page.html  base.html  index.html
templates/auth/: email_confirmed.html  login.html  profile.html  signup.html
templates/photo/: photo-add.html  photo-trans.html  photo.html
templates/users/: user.html  users.html
